k8s/ingress/prodental-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodental-ingress
  namespace: prodental
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
